maze.lessons.maze.island.IslandMaze.scala.error
Escaper:17: error: illegal start of simple expression
 	}
        ^Escaper:18: error: ';' expected but ')' found.
 	)
        ^